# fty-common-messagebus

./: .dependencies-graph.dot.part  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  ci_build.sh  ci_dependencies.sh  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  license.xml  project.xml
builds/check_zproject/: ci_build.sh
cli/: CMakeLists.txt
cli/src/: fty-msgbus-cli.cc  main.cc
doc/: .gitignore  Makefile.am  asciidoc.conf  fty-common-messagebus.adoc  mkman
examples/: CMakeLists.txt  fty_common_messagebus_example.cc  fty_common_messagebus_example2.cc  fty_common_messagebus_example_rep.cc  fty_common_messagebus_example_rep2.cc  fty_common_messagebus_example_req.cc
examples/malamute/: fty_common_messagebus_example.cc  fty_common_messagebus_example_rep.cc  fty_common_messagebus_example_rep2.cc
examples/mqtt/: CMakeLists.txt  fty_common_messagebus_mqtt_common_def.hpp  fty_common_messagebus_mqtt_example.cc
examples/mqtt/private_include/: FtyCommonMqttTestDef.hpp  FtyCommonMqttTestMathDto.h  ftyCommonMqttTestDef.hpp
examples/mqtt/src/: FtyCommonMqttTestMathDto.cpp  ftyCommonMessagebusMqttSampleAsyncReply.cpp  ftyCommonMessagebusMqttSampleAsyncRequest.cpp  ftyCommonMessagebusMqttSampleMultiThreadReqRep.cpp  ftyCommonMessagebusMqttSamplePubSub.cpp  ftyCommonMessagebusMqttSampleRep.cpp  ftyCommonMessagebusMqttSampleReply.cpp  ftyCommonMessagebusMqttSampleReq.cpp  ftyCommonMessagebusMqttSampleReqRep.cpp  ftyCommonMessagebusMqttSampleRequest.cpp  ftyCommonMessagebusMqttSampleSendRequest.cpp  ftyCommonMessagebusMqttSampleStressLib.cpp  ftyCommonMessagebusMqttSampleSyncRequest.cpp  rpc_math_cli.cpp  rpc_math_srv.cpp
examples/src/: foobar_dto.cc  foobar_dto.h  fty_common_messagebus_example.cc  fty_common_messagebus_example2.cc  fty_common_messagebus_example_rep.cc  fty_common_messagebus_example_rep2.cc  fty_common_messagebus_example_req.cc
include/: Makefile.am  fty-common-messagebus-dto.h  fty_common_dto.h  fty_common_messagebus.h  fty_common_messagebus_dispatcher.h  fty_common_messagebus_dto.h  fty_common_messagebus_exception.h  fty_common_messagebus_interface.h  fty_common_messagebus_library.h  fty_common_messagebus_message.h  fty_common_messagebus_pool_worker.h
lib/: CMakeLists.txt
lib/public_include/: fty_common_messagebus.h  fty_common_messagebus_dispatcher.h  fty_common_messagebus_dto.h  fty_common_messagebus_exception.h  fty_common_messagebus_interface.h  fty_common_messagebus_library.h  fty_common_messagebus_message.h  fty_common_messagebus_pool_worker.h
lib/src/: fty_common_messagebus_classes.h  fty_common_messagebus_interface.cc  fty_common_messagebus_malamute.cc  fty_common_messagebus_malamute.h  fty_common_messagebus_pool_worker.cc
lib/test/: PingServer.h  dispatcher.cpp  main.cpp  messagebus_client_server.cpp
packaging/debian/: changelog  control  copyright  fty-common-messagebus.dsc.obs  fty-common-messagebus.install  fty-common-messagebus.manpages  libfty-common-messagebus-dev.install  libfty-common-messagebus1.install  libfty-common-messagebus1.links  rules
packaging/redhat/: fty-common-messagebus.spec
private_include/: fty_common_messagebus_classes.h
private_include/fty/messagebus/mqtt/: fty_common_messagebus_mqtt.hpp  fty_common_messagebus_mqtt_call_back.hpp
public_include/: fty_common_messagebus.h  fty_common_messagebus_dispatcher.h  fty_common_messagebus_dto.h  fty_common_messagebus_exception.h  fty_common_messagebus_interface.h  fty_common_messagebus_library.h  fty_common_messagebus_message.h  fty_common_messagebus_pool_worker.h
public_include/fty/: message-bus.h  message.h
src/: .gitignore  Makemodule.am  fty-common-messagebus-dto.cc  fty-msgbus-cli.cc  fty_common_dto.cc  fty_common_messagebus_classes.h  fty_common_messagebus_dispatcher.cc  fty_common_messagebus_dto.cc  fty_common_messagebus_example.cc  fty_common_messagebus_example2.cc  fty_common_messagebus_example_rep.cc  fty_common_messagebus_example_rep2.cc  fty_common_messagebus_example_req.cc  fty_common_messagebus_interface.cc  fty_common_messagebus_malamute.cc  fty_common_messagebus_malamute.h  fty_common_messagebus_mqtt.cpp  fty_common_messagebus_mqtt_call_back.cpp  fty_common_messagebus_pool_worker.cc  fty_common_messagebus_private_selftest.cc  fty_common_messagebus_selftest.cc  fty_common_messagebus_unix_socket_client.cc  fty_common_messagebus_unix_socket_client.h  fty_common_messagebus_unix_socket_helpers.cc  fty_common_messagebus_unix_socket_helpers.h  fty_common_messagebus_unix_socket_server.cc  fty_common_messagebus_unix_socket_server.h  libfty_common_messagebus.pc.in  message-bus.cpp  message.cpp
test/: CMakeLists.txt  dispatcher.cpp  main.cpp  pool_worker.cpp
